--- a/CSS/global.css
+++ b/CSS/global.css
@@ -17,17 +17,21 @@ h2 {
 h3{
     font-family: "Lucida Console", "Courier New", monospace;
     color: var(--green-color);
-    font-size: 2em;
-    margin: 6px;
+    font-size: 2.2em;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 h4{
     font-family: "Lucida Console", "Courier New", monospace;
     color: var(--green-color);
-    font-size: 1em;
+    font-size: 1.6em;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 h5{
+    font-size: 1.4em;
     margin: 0;
 }
 
