--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -61,6 +61,19 @@ ul {
     height: auto;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+img#grid {
+    float: left;
+    width:  560px;
+    height: 315px;
+    background-size: cover;
+}
+
 iframe {
     width: 100%;
   }
@@ -84,6 +97,26 @@ img.interactable:hover {
     border: #333;
     outline: solid 2px var(--green-color);
 }
+
+/* Image wrapping */
+
+.image-wrapper {
+    display: inline-grid;
+    grid-template-columns: repeat(2, [col-start] 1fr);
+    grid-gap: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+.container .image {
+    width: 50%;
+}
+  
+.container img {
+    width: calc(100% - (20px * 2));
+    margin: 20px;
+}
+
 
 @media (max-width: 1000px)
 {
@@ -114,5 +147,20 @@ img.interactable:hover {
 
     li.s{
         font-size: 1em;
+    }
+
+    .image-wrapper {
+        display: grid;
+        grid-template-columns: initial;
+        align-items: center;
+        justify-content: center;
+      }
+    
+
+    img#grid {
+        float: left;
+        width:  280px;
+        height: 157.5px;
+        background-size: cover;
     }
 }
