--- a/CSS/buttons.css
+++ b/CSS/buttons.css
@@ -1,9 +1,7 @@
 button {
-    background: var(--button-color);
     border: none;
     color: white;
     /* padding: 30px 75px; */
-    padding: 30px 75px;
     text-decoration: none;
     display: inline-block;
     font-size: 2em;
@@ -11,10 +9,7 @@ button {
     border-radius: 8px;
 }
 
-button:hover {
-    color: white;
-    transform: scale(1.1);
-}
+
 
 .backbutton {
     background-color: #04041ebf;
@@ -29,6 +24,21 @@ button:hover {
     border-radius: 8px;
 }
 
+.returnbutton {
+  text-align: center;
+  border-radius: 8px;
+  background-color: var(--button-color);
+  padding: 15px;
+  position: absolute; 
+  top: 10px; 
+  right: 10px;
+}
+
+.returnbutton:hover {
+    color: black;
+    background-color: var(--green-color);;
+}
+
 .downloadbutton {
     background-color: #04041ebf;
     border: none;
@@ -38,6 +48,11 @@ button:hover {
     font-size: 2em;
     transition: 200ms;
     border-radius: 8px;
+}
+
+.downloadbutton:hover {
+    color: white;
+    transform: scale(1.1);
 }
 
 .buttoncontainer {
@@ -66,6 +81,14 @@ button:hover {
     .buttoncontainer
     {
         gap: 1em;
+    }
+
+    .returnbutton
+    {
+        font-size: 1em;
+        padding: 5px;
+        top: 70px; 
+        right: 20px;
     }
 }
 
