--- a/CSS/contentboxes.css
+++ b/CSS/contentboxes.css
@@ -24,6 +24,9 @@
     padding: 10px 10px 10px;
     border: 2px solid white;
     border-radius: 8px;
+    text-align: center;
+    position: relative;
+
 }
 
 .smallbox.l {
