--- a/CSS/topnav.css
+++ b/CSS/topnav.css
@@ -7,7 +7,6 @@
     left: 50%; transform: translate(-50%, 0);
     top: 0;
     z-index: 1;
-
 }
 
 .topnav {
@@ -30,30 +29,30 @@
 }
 
 .topnav a.active {
-    color: white;
     opacity: 0.75;
-    border-bottom: 3px solid var(--title-color)
+    border-bottom: 3px solid var(--green-color)
 }
 
 .topnav a:hover {
     background-color: var(--title-color);
-    color: white;
     opacity: 1;
-    border-bottom: 3px solid var(--title-color)
+    border-bottom: 3px solid var(--green-color)
 }
 
 @media (max-width: 1000px)
 {
-    topnav {
-        height: auto;
-        position: relative;
-    }
-
     .topnav-alignment {
         width: 100%;
         padding-left: 0px;
         padding-right: 0px;
     }
+
+    topnav {
+        height: auto;
+        position: relative;
+    }
+
+
 
     .topnav a {
         width: 20%;
