--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -125,8 +125,8 @@ img.interactable:hover {
 
 @media (max-width: 1000px)
 {
-    .description {
-        font-size: 1em;
+    p.description {
+        font-size: 1.2em;
     }
 
     ul {
@@ -140,8 +140,8 @@ img.interactable:hover {
 
 @media (max-width: 500px)
 {
-    .description {
-        font-size: 0.9em;
+    p.description {
+        font-size: 1em;
     }
 
     
