--- a/CSS/transitions.css
+++ b/CSS/transitions.css
@@ -1,44 +1,9 @@
- /* .transition-fade {
-  opacity: 1;
-  transition: 500ms;
-  transform: translateY(0);
-  transform-origin: up;
-}
-
-html.is-animating .transition-fade {
-  opacity: 0;
-  transform: translateY(0%);
-}
-
-html.is-leaving .transition-fade {
-  opacity: 1;
-  transform: translateY(-100%);
-} */
-
-.transition-fade {
-  opacity: 1;
-  transition: opacity 0.4s ease;
-}
-
 /* When Swup adds this, it fades the old page out */
-html.is-animating .transition-fade {
-  opacity: 0;
-}
 
-@keyframes upThenDownFadeIn {
+@keyframes dropInFromTop {
   0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  25% {
-    opacity: 0.5;
-  }
-  50% {
-    transform: translateY(-100%);
+    transform: translateY(-80px);
     opacity: 0;
-  }
-  75% {
-    opacity: 0.5;
   }
   100% {
     transform: translateY(0);
@@ -46,34 +11,6 @@ html.is-animating .transition-fade {
   }
 }
 
-.animate-up-down-fade {
-  animation: upThenDownFadeIn 1s ease-out forwards;
+.animate-down-fade {
+  animation: dropInFromTop 0.5s ease-out;
 }
-
-/*
-.transition-swipe {
-  transition: 500ms;
-  transform: translateY(0);
-}
-
-html.is-animating .transition-swipe {
-  transform: translateY(100px);
-} */
-
-/* .transition-fade {
-  opacity: 1;
-  transition: opacity 0.5s ease;
-}
-
-html.is-animating .transition-fade {
-  opacity: 0;
-} */
-
-/* body {
-  opacity: 1;
-  transition: opacity 0.5s ease;
-}
-
-body.fade-in {
-  opacity: 1;
-} */
