--- a/CSS/colours.css
+++ b/CSS/colours.css
@@ -5,9 +5,7 @@
     --main-bg-color: #67615F;
 
     --topnav-color: #1a1f2b;
-    /* --topnav-color: #2f3542;
-    --topnav-color: #2f3542; */
-    /* --topnav-color: #86878F; */
+    --content-grid-color: #152a50;
     --title-color: #081f3c;
     --green-color: #42B887;
     --button-color: #5783db;
