--- a/CSS/contentboxes.css
+++ b/CSS/contentboxes.css
@@ -1,9 +1,9 @@
 .title {
     color: white;
     background-color: var(--title-color);
-    font-size: 200%;
+    max-width: 600px;
     letter-spacing: 1px;
-    padding: 30px 10px 30px;
+    padding: 10px 10px 30px;
     width: 75%;
     margin-left: auto;
     margin-right: auto;
@@ -11,13 +11,11 @@
     border: 2px solid white;
     border-radius: 16px;
     white-space: normal;
-    /* -webkit-text-fill-color: rgb(255, 255, 255);
-    -webkit-text-stroke: 1px; */
 }
 
 .smallbox {
     color: white;
-    background-color: var(--title-color);
+    background-color: var(--content-grid-color);
     width: 80%;
     margin: auto;
     letter-spacing: 1px;
@@ -33,28 +31,54 @@
     text-align: left;
 }
 
-@media (max-width: 1000px)
+/*Project card */
+
+
+.project-card { 
+  background-color: var(--title-color);
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+  transition: transform 0.3s;
+}
+
+.project-card:hover {
+  transform: scale(1.03);
+}
+
+.project-card img {
+  width: 100%;
+  border-radius: 4px;
+  margin-bottom: 0.7rem;
+}
+
+.project-card h4 {
+  margin: 0.5rem 0;
+}
+
+.projects-grid {
+  display: grid;
+  background-color: var(--content-grid-color);
+  grid-template-columns: repeat(2, 1fr); /* Always 2 columns */
+  gap: 2rem;
+  padding: 2rem;
+  border-radius: 8px;
+}
+
+.featured {
+  grid-column: span 2;
+}
+
+@media (max-width: 768px) {
+  .projects-grid {
+    grid-template-columns: 1fr; /* Collapse to 1 column on small screens */
+  }
+
+}
+
+@media (max-width: 600px)
 {
     .title {
-        width: 85%;
-        font-size: 250%;
-        padding: 10px 0 10px;
-    }
-
-    .smallbox {
-        width: 80%;
-    }
-
-    .smallbox.l {
-        width: 90%;
+        max-width: 500px;
     }
 }
 
-/* mobile */
-@media (max-width: 500px)
-{  
-    .title {
-    width: 90%;
-    font-size: 200%;
-    }
-}
