--- a/CSS/topnav.css
+++ b/CSS/topnav.css
@@ -33,13 +33,14 @@
 .topnav a:hover {
     background-color: var(--title-color);
     opacity: 1;
-    border-bottom: 3px solid var(--title-color)
+    border-bottom: 3px solid var(--green-color)
 }
 
 @media (max-width: 600px) {
   .topnav {
     flex-direction: column;
     align-items: stretch;
+    
   }
 
   .topnav a {
