--- a/CSS/background.css
+++ b/CSS/background.css
@@ -15,24 +15,10 @@ body {
     background: var(--body-bg-color);
 }
 
-/* .main {
-    background: var(--main-bg-color);
-    width: 55%;
-    top: 0;  
-    margin-top: 0;
-    margin-right: auto;
-    margin-bottom: auto;
-    margin-left: auto;
-    position: relative;
-    padding: 20px;
-    height: auto;
-} */
-
 .main {
   max-width: 900px;
   margin: auto;
   padding: 2rem;
-  color: #fff;
   background-color: #0b1a36;
 }
 
@@ -40,6 +26,6 @@ body {
 {
     .main {
         font-size: 1.1rem;
-        padding: 0 1rem;   
+        padding: 0.1rem, 0.1rem;   
     }
 }
