--- a/CSS/global.css
+++ b/CSS/global.css
@@ -50,6 +50,7 @@ br {
     content: "\A\A\A\A";
     white-space: pre;
     font-size: 40px;
+    color: white;
 }
 .box {
     text-align: center;
@@ -69,7 +70,11 @@ br {
 }
 .main {
   position: relative;
-  z-index: 1;
+}
+
+.btn {
+    position: relative;
+    z-index: 10;
 }
 
 /* Link Settings */
@@ -81,16 +86,9 @@ a:link {
     text-decoration: none;
 }
   
-a:visited {
-color: var(--button-color);
-background-color: transparent;
-text-decoration: none;
-}
-
 a:hover {
-color: var(--green-color);
-background-color: transparent;
-text-decoration: underline;
+    background-color: transparent;
+    text-decoration: underline;
 }
 
 a:active {
