Improved title, created more consistent design across pages. Fixed project card scaling. Removed white line breaks

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -2,7 +2,7 @@
 {
     position: fixed;
     width: 100%;
-    
+    font-family: "Roboto", sans-serif;
     padding: 5px 0px 5px 10px;
 
     background-color: rgba(0,0,0,0.85);
