--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -82,7 +82,7 @@ iframe {
 img {
     max-width: 100%;
     height: auto;
-    width: auto\9; /* ie8 */
+    width: auto\9;
     transition: 200ms;
 }
 
