--- a/CSS/contentboxes.css
+++ b/CSS/contentboxes.css
@@ -7,12 +7,8 @@
   text-align: left;
   max-width: 720px;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.4);
-
-  /* Align center */
-  /* text-align: center;
-  border-left: none;
-  border-bottom: 4px solid var(--green-color); */
 }
+
 
 .title h1 {
   font-size: clamp(2.2rem, 6vw, 3.5rem);
@@ -21,26 +17,42 @@
 }
 
 .title h5 {
-  font-size: clamp(1.2rem, 2.5vw, 1.8rem);
+  font-size: clamp(1.4rem, 2.5vw, 1.8rem);
   color: var(--green-color);
   margin-top: 0.5rem;
+  margin-bottom: 0;
 }
 
 .smallbox {
     color: white;
     background-color: var(--content-grid-color);
-    margin: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;;
     letter-spacing: 1px;
     padding: 10px 10px 10px;
     border: 2px solid white;
     border-radius: 8px;
-    text-align: center;
     position: relative;
 
 }
 
 .smallbox.l {
     text-align: left;
+}
+
+
+.contributions-list {
+  position: relative;
+	list-style: none;
+	margin-left: 0;
+	padding-left: 1.2em;
+}
+
+.innerfirst {
+    position: relative;
+    list-style: none;
+    margin-left: 0;
+    padding-left: 1.2em;
 }
 
 /*Project grid & cards */
