--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,31 +1,34 @@
-
-h1, h2 {
-    font-family: "Lato", sans-serif;
-    font-size: clamp(2rem, 10vw, 4rem);
+h1, h2, h5 {
+  font-family: "Lato", sans-serif;
+  margin: 0;
 }
 
-h3{
-    font-family: "Lucida Console", "Courier New", monospace;
-    color: var(--green-color);
-    font-size: 2.2rem;
-    margin: 0;
+h3, h4 {
+  font-family: "Lucida Console", "Courier New", monospace;
+  margin: 0;
 }
 
-h4{
-    color: var(--green-color);
-    font-size: 1.6rem;
-    margin-top: 8px;
-    margin-bottom: 8px;
+h1 {
+  font-size: clamp(2.5rem, 5vw, 4rem);
 }
 
-h5{
-    font-family: "Lato", sans-serif;
-    font-size: clamp(2rem, 3vw, 4rem);
-    margin: 0;
+h2 {
+  font-size: clamp(2rem, 4vw, 3.5rem);
 }
 
-h6{
-    margin: 0;
+h3 {
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  color: var(--green-color);
+}
+
+h4 {
+  font-size: clamp(1.25rem, 2.5vw, 2rem);
+  color: var(--green-color);
+}
+
+h5 {
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  color: var(--green-color);
 }
 
 hr {
@@ -66,8 +69,8 @@ br {
 
 p {
     font-family: "Roboto", sans-serif;
-    /* font-family: "Lucida Console", "Courier New", monospace; */
     color: white;
+    margin: 0;
 }
 
 .btn {
