--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -8,20 +8,8 @@
 }
 
 li{
-    border: none;
-    color: white;
     padding: 10px 20px;
-    text-decoration: none;
-    font-size: 1.2em;
-    transition: 200ms;
-    margin-right: 15px;
-}
-
-ul {
-	position: relative;
-	list-style: none;
-	margin-left: 0;
-	padding-left: 1.2em;
+    font-size: 1.2rem;
 }
 
 .buttoncontainer {
